Add gridCreate() squaresCreate() colorSquares() removeAllSquares()

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <title> Etch A Sketch</title>
 </head>
 <body>
+    <button> Change Grid Size</button>
     <div id="grid-border">
-        <div id="grid-container">
 
-        </div>
-        <span id="testSquare"></span>
     </div>
 </body>
 </html>
