add html-containers css-adjustments

--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
     <title> Etch A Sketch</title>
 </head>
 <body>
-    <button> Change Grid Size</button>
-    <div id="grid-border">
-
+    
+    <div id="main-container">
+        <div id="game-title">
+            <h1> Etch A Sketch </h1>
+        </div>
+        <div id="etch-a-sketch">
+            <div id="options">
+                <div id="grid-size-info">
+                    <button id="change-grid-size"> Change Grid Size </button>
+                    <h2 id="grid-size-text"> Press this button to change the grid size, from 1 to 100! </h2>
+                </div>
+                <div id="colors-info">
+                    <h2 id="grid-size-text"> Color - WIP </h2>
+                </div>
+            </div>
+            <div id="grid-border">
+            </div>
+        </div>
     </div>
 </body>
 </html>
