--- a/index.html
+++ b/index.html
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css-and-images/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="myscript.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inika&display=swap" rel="stylesheet">
+
     <title> Etch A Sketch</title>
 </head>
 <body>
-    
     <div id="main-container">
         <div id="game-title">
             <h1> Etch A Sketch </h1>
+            <h2> Draw over the square below </h2>
         </div>
         <div id="etch-a-sketch">
             <div id="options">
                 <div id="grid-size-info">
                     <button id="change-grid-size"> Change Grid Size </button>
-                    <h2 id="grid-size-text"> Press this button to change the grid size, from 1 to 100! </h2>
+                    <h2 id="grid-size-text"> Press this button to change the grid size, from 1 to 100. </h2>
                 </div>
-                <div id="colors-info">
-                    <h2 id="grid-size-text"> Color - WIP </h2>
+                <div id="colors-info">                   
+                    <button class="colors" id="black"> Black </button>
+                    <button class="colors" id="eraser"> Eraser </button>
+                    <button class="colors" id="rainbow"> Rainbow </button>
                 </div>
             </div>
             <div id="grid-border">
