--- a/index.html
+++ b/index.html
@@ -16,26 +16,38 @@
     <title> Etch A Sketch</title>
 </head>
 <body>
+    <!-- Content Section -->
     <div id="main-container">
+
         <div id="game-title">
             <h1> Etch A Sketch </h1>
             <h2> Draw over the square below </h2>
         </div>
+
         <div id="etch-a-sketch">
+            
             <div id="options">
+
                 <div id="grid-size-info">
                     <button id="change-grid-size"> Change Grid Size </button>
                     <h2 id="grid-size-text"> Press this button to change the grid size, from 1 to 100. </h2>
                 </div>
+
                 <div id="colors-info">                   
                     <button class="colors" id="black"> Black </button>
                     <button class="colors" id="eraser"> Eraser </button>
                     <button class="colors" id="rainbow"> Rainbow </button>
                 </div>
             </div>
+
             <div id="grid-border">
             </div>
+
         </div>
     </div>
+    <!-- Footer Section -->
+    <footer>
+        <p> Made by VAntoDev - <a href="https://github.com/VAntoDev"> Github</a> </p> 
+    </footer> 
 </body>
 </html>
